--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,39 @@
 			<artifactId>jackson-databind-nullable</artifactId>
 			<version>0.2.6</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.9.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.9.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<!--Cobertura con Jacoco-->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.8</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<!--Cobertura con Jacoco-->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -128,6 +158,34 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--Cobertura con Jacoco-->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<!--Exclusiones para reporte de cobertura-->
+				<configuration>
+					<excludes>
+						<exclude>com/nttdata/customerms/CustomermsApplication.class</exclude>
+						<exclude>com/nttdata/customerms/ClientesApiDelegateImp.class</exclude>
+					</excludes>
+				</configuration>
+				<!--Exclusiones para reporte de cobertura-->
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!--Cobertura con Jacoco-->
 		</plugins>
 	</build>
 
